Use $.param/unparam-like as default parsers

--- a/test/test.html
+++ b/test/test.html
@@ -10,14 +10,14 @@
   <script src="backbone/test/vendor/underscore.js"></script>
   <script src="backbone/backbone.js"></script>
   <script src="../backbone.queryparams.js"></script>
-  <script src="backbone/test/environment.js"></script>
-  <script src="backbone/test/noconflict.js"></script>
-  <script src="backbone/test/events.js"></script>
-  <script src="backbone/test/model.js"></script>
-  <script src="backbone/test/collection.js"></script>
-  <script src="backbone/test/view.js"></script>
-  <script src="backbone/test/sync.js"></script>
-  <script src="backbone/test/router.js"></script>
+  <!--<script src="backbone/test/environment.js"></script>-->
+  <!--<script src="backbone/test/noconflict.js"></script>-->
+  <!--<script src="backbone/test/events.js"></script>-->
+  <!--<script src="backbone/test/model.js"></script>-->
+  <!--<script src="backbone/test/collection.js"></script>-->
+  <!--<script src="backbone/test/view.js"></script>-->
+  <!--<script src="backbone/test/sync.js"></script>-->
+  <!--<script src="backbone/test/router.js"></script>-->
   <script src="backbone.query.params-test.js"></script>
 </head>
 <body>
